--- a/georgiana.medrea/gmedrea-social-media-app/src/pages/friends/Friends.module.scss
+++ b/georgiana.medrea/gmedrea-social-media-app/src/pages/friends/Friends.module.scss
@@ -9,15 +9,16 @@
         top: 5rem;
         left: 0;
         width: 20rem;
-        height: 90vh;
+        height: 89vh;
         border: 5px solid whitesmoke;
         position: fixed;
         overflow: auto;
+        overflow-x: hidden;
         display: flex;
         flex-direction: column;
 
         .friendElement {
-            margin-top: -1rem;
+            top: -1rem;
 
             .listTitle {
                 position: relative;
@@ -74,7 +75,8 @@
                     flex-direction: column;
                     align-items: center;
                     justify-content: center;
-                    margin-top: -1.5rem;
+                    position: relative;
+                    top: -1.7rem;
                     gap: 0.2rem;
 
                     .confirmButton {
@@ -125,7 +127,7 @@
 
                 .suggestedFriendName {
                     position: relative;
-                    top: -0.5;
+                    top: -0.5rem;
                 }
 
                 .button {
@@ -134,7 +136,8 @@
                     flex-direction: column;
                     align-items: center;
                     justify-content: center;
-                    margin-top: -1.5rem;
+                    position: relative;
+                    top: -1.7rem;
                     gap: 0.2rem;
 
                     .addFriendButton {
