--- a/georgiana.medrea/gmedrea-social-media-app/src/pages/profile/userProfile/UserProfile.module.scss
+++ b/georgiana.medrea/gmedrea-social-media-app/src/pages/profile/userProfile/UserProfile.module.scss
@@ -86,16 +86,19 @@
                 border-radius: 10px;
                 display: flex;
                 flex-wrap: wrap;
+                overflow-x: hidden;
 
                 .userFriendPhoto {
                     width: 8rem;
                     height: 8rem;
                     border-radius: 10px;
+                    position: relative;
+                    left: 1rem;
                 }
 
                 .userFriendName {
                     position: relative;
-                    left: 1.5rem;
+                    left: 0.8rem;
                 }
             }
         }
@@ -357,7 +360,7 @@
             gap: 2rem;
 
             .userProfileRightSection {
-                margin-left: -7rem;
+                left: 2rem;
 
                 .userMainPost {
                     width: 32rem;
@@ -373,5 +376,11 @@
                 }
             }
         }
+    }
+}
+
+@media only screen and (max-width: 500px) {
+    .userProfileSections {
+        left:5rem;
     }
 }
