--- a/georgiana.medrea/gmedrea-social-media-app/src/pages/startingPage/rightSide/RightSide.module.scss
+++ b/georgiana.medrea/gmedrea-social-media-app/src/pages/startingPage/rightSide/RightSide.module.scss
@@ -12,10 +12,6 @@
     overflow: auto;
     display: flex;
     flex-direction: column;
-    
-    .rightNav {
-        margin-top: -0.5rem;
-    }
 
     .onlineUserName {
         margin-left: 1rem;
